bk_ida/gobmkida/c1/has_neighbor
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/has_neighbor/src/engine/board.c:2911:22: error: use of undeclared identifier 'byte_9AA89F'
&& ( unsigned __int8)byte_9AA89F[pos] != color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/has_neighbor/src/engine/board.c:2912:22: error: use of undeclared identifier 'byte_9AA88C'
&& ( unsigned __int8)byte_9AA88C[pos] != color ) 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/has_neighbor/src/obj/1/board.o] Error 1
